--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -87,6 +87,7 @@ backend:
         metakeywords: Ключевые слова
         img: Изображение продукта
         text: Текст продукта
+        hideMenu: Скрыть в меню
         not_found: Продукт не существует
         validation:
             title: Вы не ввели заголовок!
