new update products

--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -88,6 +88,8 @@ backend:
         img: Изображение продукта
         text: Текст продукта
         hideMenu: Скрыть в меню
+        main: Показать на главной?
+        position: Позиция
         not_found: Продукт не существует
         validation:
             title: Вы не ввели заголовок!
