add new relax block

--- a/src/Site/MainBundle/Resources/translations/menu.ru.yml
+++ b/src/Site/MainBundle/Resources/translations/menu.ru.yml
@@ -90,6 +90,7 @@ backend:
         text: Текст продукта
         hideMenu: Скрыть в меню
         main: Показать на главной?
+        relax: На главной в разделе Релакс?
         position: Позиция
         not_found: Продукт не существует
         validation:
